--- a/index.html
+++ b/index.html
@@ -33,19 +33,205 @@
 
     <!-- banner starts here -->
     <section id="banner">
+        <div class="container row align-items justify-center">
+            <div class="banner-content">
+                <h3>
+                    Lorem ipsum dolor sit iusmod tempor
+                </h3>
+                <b>incididunt bore</b>
+                <h5>Orem ipsum dolor sit amet, consectetur</h5>
+                <div class="divider"><img src="./img/divider.png" alt="banner-divider"></div>
+                <a href="#">know more</a>
+            </div>
+        </div>
+    </section>
+    <!-- banner ends here -->
+
+    <!-- About starts here -->
+    <section id="about">
         <div class="container">
-            <div class="row">
-                <div class="banner-content">
-                    <h3>
-                        Lorem ipsum dolor sit iusmod tempor
-                    </h3>
-                    <b>incididunt bore</b>
-                    <h5>Orem ipsum dolor sit amet, consectetur</h5>
-                    <img src="./img/divider.png" alt="banner-divider">
-                    <a href="#">know more</a>
+            <div class="common-head-section">
+                <h3>about me</h3>
+                <p>~~~~~~~~ :: ~~~~~~~~</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                    <span>quis nostrud exercitation ullamco</span> laboris nisi ut aliquip ex ea 
+                    commodo consequat duis aute irure dolor.</p>
+            </div>
+
+            <div class="row justify-content">
+                <div class="card">
+                    <img src="./img/about-card1.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/about-card2.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/about-card3.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/about-card4.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- services starts here -->
+    <section id="services">
+        <div class="background-img">
+            <img src="./img/services.jpg" alt="background-img">
+        </div>
+        <div class="container">
+            <div class="common-head-section">
+                <h3>services</h3>
+                <p>~~~~~ :: ~~~~~</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="row">
+                <div class="card">
+                    <img src="./img/services-card1.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/services-card2.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/services-card3.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/services-card4.png" alt="icon">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- my work starts here -->
+    <section id="my-work">
+        <div class="container">
+            <div class="common-head-section">
+                <h3>the work</h3>
+                <p>~~~~~ :: ~~~~~</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+                    ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage1.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage2.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage3.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage4.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage5.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage6.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage7.jpg" alt="photo collage">
+            </div>
+            <div class="photo-collage">
+                <div class="hover-card">
+                    <h3>Title goes here</h3>
+                    <p>onsectetur adipisicing elit, sedo eiusmod tempor incidi
+                        et dolorerserss eerhfre mag.</p>
+                </div>
+                <img src="./img/photo-collage8.jpg" alt="photo collage">
+            </div>
+        </div>
+    </section>
+
+    <!-- contact me starts here -->
+    <section id="contact-me">
+        <div class="container">
+            <div class="common-head-section">
+                <h3>CONTACT ME</h3>
+                <p>~~~~~ :: ~~~~~</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt 
+                    ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section starts here -->
+    <footer>
+        <div class="container">
+            <form method="get">
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="email address">
+                <textarea name="subject" placeholder="subject"></textarea>
+                <textarea name="message" placeholder="message"></textarea>
+                <button type="submit"><a href="#">submit</a></button>
+            </form>
+        </div>
+        <div class="copyright-section">
+            <p>© MYFOLIO</p>
+        </div>
+    </footer>
 </body>
 </html>
